--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,8 @@ jobs:
        - name: Setup Java JDK
          uses: actions/setup-java@v2.5.0
          with:
-           java-version: 1.8
+           distribution: 'adopt'
+           java-version: '11'
        - name: Build With Gradle
          run: ./gradlew build
        - name: Upload APK
