Sign release bundle

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,16 @@ jobs:
          with:
            name: life
            path: app/life/release/app-life-release.aab
+           
+       - name: Sign AAB
+         id: sign
+         uses: r0adkll/sign-android-release@v1
+         with:
+          releaseDirectory: app/build/outputs/bundle/release
+          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+          alias: ${{ secrets.ALIAS }}
+          keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+          keyPassword: ${{ secrets.KEY_PASSWORD }}
        - name: Upload Meme Bundle
          uses: actions/upload-artifact@v2.3.1
          with:
