--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,21 @@ jobs:
        - name: Build flavor meme
          run: ./gradlew assemblememeRelease
          
-       - name: Sign AAB
-         id: sign
+       - name: Sign Life AAB
+         id: signlife
          uses: r0adkll/sign-android-release@v1
          with:
-          releaseDirectory: app/life/release/app-life-release.aab
+          releaseDirectory: app/build/outputs/bundle/lifeRelease/
+          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+          alias: ${{ secrets.ALIAS }}
+          keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+          keyPassword: ${{ secrets.KEY_PASSWORD }}
+          
+       - name: Sign Meme AAB
+         id: signmeme
+         uses: r0adkll/sign-android-release@v1
+         with:
+          releaseDirectory: app/build/outputs/bundle/memeRelease/
           signingKeyBase64: ${{ secrets.SIGNING_KEY }}
           alias: ${{ secrets.ALIAS }}
           keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
@@ -35,10 +45,10 @@ jobs:
          uses: actions/upload-artifact@v2.3.1
          with:
            name: life
-           path: app/life/release/app-life-release.aab
+           path: app/build/outputs/bundle/lifeRelease/app-life-release.aab
      
        - name: Upload Meme Bundle
          uses: actions/upload-artifact@v2.3.1
          with:
            name: meme
-           path: app/meme/release/app-meme-release.aab
+           path: app/build/outputs/bundle/memeRelease/app-meme-release.aab
