--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,9 +52,9 @@ jobs:
          with:
           serviceAccountJson: service_account.json
           packageName: com.githubworkflowsample.life
-          releaseFile: app/build/outputs/bundle/lifeRelease/app-life-release.aab
+          releaseFiles: app/build/outputs/bundle/lifeRelease/app-life-release.aab
           track: beta
-          whatsNewDirectory: whatsnew/
+          
          
        - name: Upload life Bundle
          uses: actions/upload-artifact@v2.3.1
