test commit with new json

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,14 +46,14 @@ jobs:
          id: createServiceAccount
          run: echo '${{ secrets.SERVICE_ACCOUNT_JSON }}' > service_account.json
          
-       - name: Deploy to Play Store (BETA)
+       - name: Deploy to Play Store (Internal)
          id: deploy
          uses: r0adkll/upload-google-play@v1
          with:
           serviceAccountJson: service_account.json
           packageName: com.githubworkflowsample.life
           releaseFiles: app/build/outputs/bundle/lifeRelease/app-life-release.aab
-          track: beta
+          track: internal
           
          
        - name: Upload life Bundle
