--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,8 @@ android {
 //            applicationIdSuffix = ""
 //            versionNameSuffix = ""
             applicationId "com.githubworkflowsample.meme"
-            versionCode 5
-            versionName "v1.0.4"
+            versionCode 7
+            versionName "v1.0.7"
             resValue "string", "app_name", "Meme"
 //            manifestPlaceholders = [
 //                    appIcon: "@mipmap/ic_app_icon_bonita",
@@ -39,8 +39,8 @@ android {
 //            applicationIdSuffix = ""
 //            versionNameSuffix = ""
             applicationId "com.githubworkflowsample.life"
-            versionCode 5
-            versionName "v1.0.4"
+            versionCode 8
+            versionName "v1.0.8"
             resValue "string", "app_name", "Lifey"
 //            manifestPlaceholders = [
 //                    appIcon: "@mipmap/ic_app_icon_new",
@@ -51,7 +51,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            debuggable false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -73,4 +74,8 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
+    //lottie
+    implementation "com.airbnb.android:lottie:4.2.2"
 }
