--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,9 @@ jobs:
            java-version: '11'
        - name: Build flavor life
          run: ./gradlew bundlelifeRelease
-      
+        
+       - name: Build flavor life
+         run: ./gradlew bundlememeRelease
          
        - name: Sign Life AAB
          id: signlife
