--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
           serviceAccountJson: service_account.json
           packageName: com.githubworkflowsample.life
           status: draft
-          userFraction: 0.0
+          userFraction: 0.0-0.1
           releaseFiles: app/build/outputs/bundle/lifeRelease/app-life-release.aab
           track: beta
           
